<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/wrapper" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:padding="10dip">
 	
	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_marginBottom="30dip">
	    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/icon" android:layout_marginLeft="10dip" />
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" 
		    android:layout_marginLeft="10dip" android:layout_marginTop="10dip"
		    android:text="@string/app_name" android:textSize="24sp" android:textColor="#ececec"/>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
		    android:layout_marginLeft="5dip" android:layout_marginTop="10dip" android:text="@string/app_version"
		    android:textSize="24sp" android:ems="24" android:textColor="#ececec" android:lineSpacingMultiplier="1.1"/>
	</LinearLayout>

	<LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dip">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/introduce" android:textSize="16sp" android:layout_marginBottom="15dip"/>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textStyle="bold"
		     android:text="@string/staff" android:textSize="14sp" android:autoLink="email" android:textColorLink="#ff7700" android:lineSpacingMultiplier="1.5"/>
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
	    <Button android:id="@+id/btn_close" android:layout_margin="15dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/close" />
	</LinearLayout>
</LinearLayout>